cart-page complete and firebase added

--- a/cart.html
+++ b/cart.html
@@ -183,7 +183,6 @@
                 <div class="cart-item-delete w-10 font-bold text-gray-300 cursor-pointer hover:text-gray-400">
                   <i class="fas fa-times"></i>
                 </div>
-
               </div>
 
               <div class="cart-item flex items-center pb-4 border-b border-gray-100">
@@ -230,6 +229,19 @@
               </div>
 
 
+            </div>
+
+            <div class="complete-order flex justify-end mt-10">
+              <div class="total-cost mr-7">
+                <h2 class="text-gray-400">Total Cost</h2>
+                <div class="total-cost-number font-bold text-3xl text-gray-600">
+                  $1,690.00
+                </div>
+
+              </div>
+              <div class="complete-order-button w-56 flex items-center justify-center bg-yellow-500 rounded text-white font-bold cursor-pointer hover:bg-yellow-600">
+                Complete Order
+              </div>
 
             </div>
 
